kitten/reported_bugs/rust/rust-83907/stderr.txt
error[E0412]: cannot find type `One` in this scope

 --> mutant.rs:4:36

  |

4 | static STATIC_VAR_FIVE : & 'static One ( ) = & [ & [ "test" ] , & [ "other one" ] ] ;

  |                                    ^^^ not found in this scope



error: internal compiler error: compiler/rustc_resolve/src/late/lifetimes.rs:2706:32: In fn_like_elision without appropriate scope above



thread 'rustc' panicked at 'Box<Any>', /rustc/c755ee4ce8cae6ea977d65a0288480940db721d9/library/std/src/panic.rs:59:5

note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace



note: the compiler unexpectedly panicked. this is a bug.



note: we would appreciate a bug report: https://github.com/rust-lang/rust/issues/new?labels=C-bug%2C+I-ICE%2C+T-compiler&template=ice.md



note: rustc 1.53.0-nightly (c755ee4ce 2021-04-04) running on x86_64-unknown-linux-gnu



note: compiler flags: -Z mir-opt-level=3 -Z new-llvm-pass-manager=yes -Z unsound-mir-opts=yes -Z polonius=yes -Z polymorphize=yes -C debuginfo=2 -C opt-level=3 --crate-type staticlib



query stack during panic:

#0 [resolve_lifetimes] resolving lifetimes

#1 [named_region_map] looking up a named region

end of query stack

error: aborting due to 2 previous errors



For more information about this error, try `rustc --explain E0412`.

